improvement html/css ; media-query done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lvl_3_4_designinterior</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media_600.css">
 </head>
 <body>
     <header>
@@ -42,19 +43,20 @@
                 <p>Take a look at some of our featured picks that have made editorial debuts</p>
             </article>
             <div>
-                <img src="./assets/img/features1.jpg" alt="random">
-                <img src="./assets/img/features2.jpg" alt="random">
-                <img src="./assets/img/features3.jpg" alt="random">
-                
+                <div class="image_card">
+                    <img src="./assets/img/features1.jpg" alt="random">
+                    <p>Image by Michal Jamoluk from Pixabay</p>
+                </div>
+                <div class="image_card">
+                    <img src="./assets/img/features2.jpg" alt="random">
+                    <p>Image by StockSnap from Pixabay</p>
+                </div>
+                <div class="image_card">
+                    <img src="./assets/img/features3.jpg" alt="random">
+                    <p>Image by miarpirttila from Pixabay</p>
+                </div>
             </div>
-            <div>
-                <p>Image by Michal Jamoluk from Pixabay</p>
-                <p>Image by StockSnap from Pixabay</p>
-                <p>Image by miarpirttila from Pixabay</p>
-            </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/GI71fXmRrLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/GI71fXmRrLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
     </main>  
     <footer>
